TestSuite/errors/err0208.pas
type IInt = interface
event ev: procedure(sender: object);
end;
begin
  
end.